# visual-remusys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  package.json
.kimi/: analysis-comparison.md  analysis-lens-b1.md  analysis-lens-b2.md  analysis-wasm-b1.md  analysis-wasm-b2.md
docs/: intro.md  project-arch.md  remusys-lens-b2-app-guideview-design.md  remusys-wasm.md
remusys-ir-parser/: Cargo.toml
remusys-ir-parser/examples/: clone-func.ll  main.ll
remusys-ir-parser/src/: ast.rs  irgen-bk.rs  irgen.rs  lib.rs  mapping.rs  parser.rs  sema.rs  tokens.rs
remusys-ir-parser/src/ast/: inst.rs  typing.rs  value.rs
remusys-lens/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
remusys-lens-b2/: index.html  package.json
remusys-lens-b2/src/: App.css  App.tsx  AppMenu.tsx  FileLoader.tsx  file-load.tsx  source-cache.ts
remusys-lens-b2/src/flow/: Edge.tsx  FlowViewer.tsx  Node.tsx  state.ts
remusys-lens-b2/src/guide_view/: ChildRow.css  ChildRow.tsx  GuideView.tsx  Node.tsx  NodeMenu.tsx  TypeIcon.tsx  guide-view-tree.ts
remusys-lens-b2/src/ir/: state.ts  types.ts
remusys-lens-b2/src/source_view/: SourceView.css  SourceView.tsx
remusys-lens/examples/: custom-node.md
remusys-lens/src/: App.css  App.tsx  AppMenu.tsx  FileLoader.tsx  TopMenu.tsx  file-load.tsx  index.css  source-cache.ts
remusys-lens/src/editor/: LensViewer.css  LensViewer.tsx  llvmMonarch.ts
remusys-lens/src/examples/: DagreExamplePage.tsx  DagreTreeExample.tsx  ExampleApp.tsx
remusys-lens/src/flow/: Edge.tsx  FlowViewer.css  FlowViewer.tsx  Node.tsx  Toolbar.tsx  cfg.ts  dominance.ts  dot-example.json  flow-stat.ts  graphviz-object.ts  layout.ts  state.ts
remusys-lens/src/guide-view/: GuideContext.tsx  GuideView.tsx  guide-view-tree.bk.ts  guide-view-tree.ts  types.ts
remusys-wasm/: Cargo.toml  ir-internal.md
remusys-wasm-b2/: Cargo.toml
remusys-wasm-b2/api/: types.ts
remusys-wasm-b2/src/: dto.rs  lib.rs  module.rs  tree.rs  types.rs
remusys-wasm/api/: types.ts
remusys-wasm/cases/: main.sy
remusys-wasm/src/: cfg.rs  dfg.rs  dto.rs  irparse.rs  lib.rs  mapping.rs  module.rs  rename.rs  tree.rs  types.rs
remusys-wasm/src/dto/: cfg.rs  codecs.rs  defuse_graph.rs  dfg.rs  dom.rs  testing.rs
remusys-wasm/src/graphs/: call_graph.rs  cfg.rs  dfg.rs
remusys-wasm/src/module/: rename.rs  secondary.rs  source_buf.rs  source_tree.rs  source_tree_builder.rs
remusys-wasm/src/tree/: builder.rs  expand.rs  testing.rs
remusys-wasm/ts/: api.ts
(+46 files in other folders)
